--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
     
   </div>
 
-  <div id="chat_box_container">
+  <div id="chat_box_container" class="hidden">
 
     <div id="chat_box"></div>
     <div id="users">
